[gd_scene load_steps=13 format=3 uid="uid://brkjmox0e57rp"]

[ext_resource type="Script" uid="uid://bxiljfe3xbh0m" path="res://entities/player/Player.gd" id="1_hqtht"]
[ext_resource type="Script" uid="uid://cd16gohwdyu8l" path="res://entities/player/PlayerSprite.gd" id="2_qh4bd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64wtt"]
size = Vector2(32, 48)

[sub_resource type="Gradient" id="Gradient_s3hkd"]
offsets = PackedFloat32Array(0, 0.3, 0.7, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.8, 1, 1, 1, 0.8, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pnmud"]
gradient = SubResource("Gradient_s3hkd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dkbkh"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 5.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_pnmud")

[sub_resource type="Animation" id="Animation_6gpve"]
resource_name = "dash"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ltlf8"]
resource_name = "dash_squash_stretch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_b52x3"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w2h5f"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1.1, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v6n7s"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i25lq"]
_data = {
&"dash": SubResource("Animation_6gpve"),
&"dash_squash_stretch": SubResource("Animation_ltlf8"),
&"idle": SubResource("Animation_b52x3"),
&"jump": SubResource("Animation_w2h5f"),
&"run": SubResource("Animation_v6n7s")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_hqtht")

[node name="Sprite2D" type="Sprite2D" parent="."]
script = ExtResource("2_qh4bd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_64wtt")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(0, 5)
collision_mask = 9

[node name="DashParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.3
explosiveness = 0.1
randomness = 0.2
process_material = SubResource("ParticleProcessMaterial_dkbkh")

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="DashSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="PassSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i25lq")
}

[node name="Check_Ball_A2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="Check_Ball_CS2D" type="CollisionShape2D" parent="Check_Ball_A2D"]
scale = Vector2(1.125, 1.125)
shape = SubResource("RectangleShape2D_64wtt")

[node name="Node_Flipper" type="Node2D" parent="."]

[node name="BallPosition" type="Marker2D" parent="Node_Flipper"]
position = Vector2(20, 0)

[node name="PassDirectionLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
default_color = Color(1, 1, 1, 0.392157)

[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="area_entered" from="Check_Ball_A2D" to="." method="_on_check_ball_a_2d_area_entered"]
